<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:layout_margin="5dp"
                android:onClick="fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_animation" />
            <Button
                android:layout_margin="5dp"
                android:onClick="image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image" />
            <Button
                android:layout_margin="5dp"
                android:onClick="button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_animation" />

            <Button
                android:layout_margin="5dp"
                android:onClick="listener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animation_listener" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
