<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">\

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_form"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:src="@drawable/progdev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/imageView" />
       <LinearLayout
           android:padding="20dp"
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/username"
               android:layout_gravity="left" />
           <EditText
               android:id="@+id/username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/password"
               android:layout_gravity="left" />
           <EditText
               android:id="@+id/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/login"
               android:id="@+id/login"
               android:layout_gravity="right" />
       </LinearLayout>
    </LinearLayout>

</RelativeLayout>
